--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
               Social Networks
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown-6">
-              <li><a class="dropdown-item" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
-              <li><a class="dropdown-item" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
+              <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
+              <li><a class="dropdown-item" href="https://www.tiktok.com/@notadesigncompany">TikTok</a></li>
               <li><a class="dropdown-item" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
               <li><a class="dropdown-item" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
             </ul>
@@ -233,8 +233,8 @@
                       <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
                       <div class="collapse" id="menu-2" data-bs-parent="#toc-nav">
                           <ul class="nav nav-minimal nav-minimal-columns">
-                              <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
-                              <li class="nav-item fs-5"><a class="nav-link" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
+                              <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
+                              <li><a class="dropdown-item" href="https://www.tiktok.com/@notadesigncompany">TikTok</a></li>
                               <li class="nav-item fs-5"><a class="nav-link" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                               <li class="nav-item fs-5"><a class="nav-link" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
                           </ul>
@@ -296,7 +296,7 @@
                 </div>
                 <div>
                   <h4 class="fs-5">Promotion:</h4>
-                  <p class="text-secondary fs-lg">Not a Design Company is capable to give you an high-quality promotion strategy in oreder to go viral.</p>
+                  <p class="text-secondary fs-lg">Not a Design Company is capable to give you an high-quality promotion strategy in order to go viral.</p>
                 </div>
                 <div>
                   <h4 class="fs-5">Mantainance:</h4>
@@ -816,7 +816,7 @@
                     <p class="text-secondary">
                       <span class="fw-bold text-white">Our prices are meticulously tailored to individual needs and are subject to initial consultations with the client. </span>
                       <br>
-                      Basic projects, like a standard landing page, could start at just $1500. For more intricate dynamic websites demanding an intensive promotional strategy, prices can extend to $15000.
+                      Basic projects, like a standard landing page, could start at just $1500. For more intricate dynamic websites demanding an intensive promotional strategy, prices can extend to $20000.
                       <br>
                       For a personalized offer contact us.
                     </p>
