--- a/websites/documentation/documentation.html
+++ b/websites/documentation/documentation.html
@@ -149,7 +149,7 @@
                                                     <a class="nav-link" href="">Introduction</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="html">Changelog</a>
+                                                    <a class="nav-link" href="">Changelog</a>
                                                 </li>
                                             </ul>
                                         </div>
@@ -159,49 +159,49 @@
                                         <div class="collapse " id="menu-2" data-bs-parent="#toc-nav">
                                             <ul class="nav nav-minimal flex-column">
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="html">Accordion</a>
+                                                    <a class="nav-link" href="">Accordion</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="l">Alerts</a>
+                                                    <a class="nav-link" href="">Alerts</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="ml">Avatars</a>
+                                                    <a class="nav-link" href="">Avatars</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="">Badge</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href=".html">Breadcrumb</a>
+                                                    <a class="nav-link" href="">Breadcrumb</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="ml">Buttons</a>
+                                                    <a class="nav-link" href="">Buttons</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href=">Card</a>
+                                                    <a class="nav-link" href="">Card</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="tml">Carousel</a>
+                                                    <a class="nav-link" href="">Carousel</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="html">Countdown</a>
+                                                    <a class="nav-link" href="">Countdown</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="html">Dropdowns</a>
+                                                    <a class="nav-link" href="">Dropdowns</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="">Forms</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="l">Frames</a>
+                                                    <a class="nav-link" href="">Frames</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="">Icons</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="ml">Isotope</a>
+                                                    <a class="nav-link" href="">Isotope</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="tml">Lightbox</a>
+                                                    <a class="nav-link" href="">Lightbox</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="">Lists</a>
@@ -210,13 +210,13 @@
                                                     <a class="nav-link" href="">Modal</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="l">Navbar</a>
+                                                    <a class="nav-link" href="">Navbar</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="ll.html">Smoothscroll</a>
+                                                    <a class="nav-link" href="">Smoothscroll</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="tml">Spinners</a>
+                                                    <a class="nav-link" href="">Spinners</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="">Steps</a>
@@ -235,16 +235,16 @@
                                         <div class="collapse " id="menu-3" data-bs-parent="#toc-nav">
                                             <ul class="nav nav-minimal flex-column">
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="Animate on Scroll</a>
+                                                    <a class="nav-link" href="Animate on Scroll"></a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="l">Sizing</a>
+                                                    <a class="nav-link" href="">Sizing</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href=".html">Background</a>
+                                                    <a class="nav-link" href="">Background</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="ml">Shadows</a>
+                                                    <a class="nav-link" href="">Shadows</a>
                                                 </li>
                                             </ul>
                                         </div>
