--- a/websites/agency/agency.html
+++ b/websites/agency/agency.html
@@ -122,7 +122,7 @@
                         <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
                         <div class="collapse" id="menu-2" data-bs-parent="#toc-nav">
                             <ul class="nav nav-minimal nav-minimal-columns">
-                                <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                                <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                                 <li class="nav-item fs-5"><a class="nav-link" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                                 <li class="nav-item fs-5"><a class="nav-link" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                                 <li class="nav-item fs-5"><a class="nav-link" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
@@ -403,13 +403,13 @@
             <div class="container">
                 <div class="row g-0 gallery-1">
                     <div class="col-lg-3">
-                        <a href="https://www.instagram.com/not.a.design.company/" class="card card-arrow card-hover-arrow equal-lg-1-1 text-white bg-black">
+                        <a href="https://www.instagram.com/notadesigncompany/" class="card card-arrow card-hover-arrow equal-lg-1-1 text-white bg-black">
                             <div class="card-wrap">
                                 <div class="card-header pb-0">
                                     <i class="bi bi-instagram fs-3"></i>
                                 </div>
                                 <div class="card-footer mt-auto">
-                                    <h5 class="fs-lg">@not.a.design.company</h5>
+                                    <h5 class="fs-lg">@notadesigncompany</h5>
                                 </div>
                             </div>
                         </a>
@@ -527,7 +527,7 @@
                             <div class="col-6 col-md-4">
                                 <span class="eyebrow text-muted mb-1 d-flex">Follow us</span>
                                 <ul class="list-unstyled">
-                                    <li class="mb-1"><a href="https://www.instagram.com/not.a.design.company/" class="text-reset text-primary-hover">Instagram</a></li>
+                                    <li class="mb-1"><a href="https://www.instagram.com/notadesigncompany/" class="text-reset text-primary-hover">Instagram</a></li>
                                     <li class="mb-1"><a href="https://www.tiktok.com/@not.a.design.company?lang=en" class="text-reset text-primary-hover">TikTok</a></li>
                                     <li class="mb-1"><a href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g" class="text-reset text-primary-hover">Linkedin</a></li>
                                     <li><a href="https://www.linkedin.com/company/98444881/" class="text-reset text-primary-hover">Youtube</a></li>
