--- a/websites/event/event.html
+++ b/websites/event/event.html
@@ -115,7 +115,7 @@
                     Social Networks
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown-4">
-                    <li><a class="dropdown-item" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                    <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                     <li><a class="dropdown-item" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                     <li><a class="dropdown-item" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                     <li><a class="dropdown-item" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
@@ -493,7 +493,7 @@
             <div class="row g-0 g-lg-6 text-secondary">
                 <div class="col-lg-6 text-lg-end order-lg-2">
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a href="https://www.instagram.com/not.a.design.company/" class="text-reset text-primary-hover">Instagram</a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com/notadesigncompany/" class="text-reset text-primary-hover">Instagram</a></li>
                         <li class="list-inline-item ms-1"><a href="https://www.tiktok.com/@not.a.design.company?lang=en" class="text-reset text-primary-hover">TikTok</a></li>
                         <li class="list-inline-item ms-1"><a href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g" class="text-reset text-primary-hover">Youtube</a></li>
                         <li class="list-inline-item ms-1"><a href="https://www.linkedin.com/company/98444881/" class="text-reset text-primary-hover">Linkedin</a></li>
