--- a/websites/job-board/job-board.html
+++ b/websites/job-board/job-board.html
@@ -115,7 +115,7 @@
                     Social Networks
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown-4">
-                    <li><a class="dropdown-item" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                    <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                     <li><a class="dropdown-item" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                     <li><a class="dropdown-item" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                     <li><a class="dropdown-item" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
@@ -517,7 +517,7 @@
                         <div class="col-6 col-md-4">
                             <span class="eyebrow text-muted mb-1 d-flex">Follow us</span>
                             <ul class="list-unstyled">
-                                <li class="mb-1"><a href="https://www.instagram.com/not.a.design.company/" class="text-reset text-primary-hover">Instagram</a></li>
+                                <li class="mb-1"><a href="https://www.instagram.com/notadesigncompany/" class="text-reset text-primary-hover">Instagram</a></li>
                                 <li class="mb-1"><a href="https://www.tiktok.com/@not.a.design.company?lang=en" class="text-reset text-primary-hover">TikTok</a></li>
                                 <li class="mb-1"><a href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g" class="text-reset text-primary-hover">Linkedin</a></li>
                                 <li><a href="https://www.linkedin.com/company/98444881/" class="text-reset text-primary-hover">Youtube</a></li>
