--- a/websites/portfolio-list/portfolio-list.html
+++ b/websites/portfolio-list/portfolio-list.html
@@ -115,7 +115,7 @@
                     Social Networks
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown-4">
-                    <li><a class="dropdown-item" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                    <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                     <li><a class="dropdown-item" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                     <li><a class="dropdown-item" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                     <li><a class="dropdown-item" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
@@ -237,7 +237,7 @@
             <div class="row align-items-center g-1 g-lg-6 text-muted">
                 <div class="col-md-6 col-lg-5 order-lg-2 text-center text-md-start">
                     <ul class="list-inline small">
-                        <li class="list-inline-item"><a href="https://www.instagram.com/not.a.design.company/" class="text-reset text-primary-hover">Instagram</a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com/notadesigncompany/" class="text-reset text-primary-hover">Instagram</a></li>
                         <li class="list-inline-item ms-1"><a href="https://www.tiktok.com/@not.a.design.company?lang=en" class="text-reset text-primary-hover">TikTok</a></li>
                         <li class="list-inline-item ms-1"><a href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g" class="text-reset text-primary-hover">Youtube</a></li>
                         <li class="list-inline-item ms-1"><a href="https://www.linkedin.com/company/98444881/" class="text-reset text-primary-hover">Linkedin</a></li>
