--- a/websites/product/product.html
+++ b/websites/product/product.html
@@ -122,7 +122,7 @@
                     <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
                     <div class="collapse" id="menu-2" data-bs-parent="#toc-nav">
                         <ul class="nav nav-minimal nav-minimal-columns">
-                            <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                            <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                             <li class="nav-item fs-5"><a class="nav-link" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                             <li class="nav-item fs-5"><a class="nav-link" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                             <li class="nav-item fs-5"><a class="nav-link" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
@@ -443,7 +443,7 @@
                             <div class="col-6 col-md-4">
                                 <span class="eyebrow text-muted mb-1 d-flex">Follow us</span>
                                 <ul class="list-unstyled">
-                                    <li class="mb-1"><a href="https://www.instagram.com/not.a.design.company/" class="text-reset text-primary-hover">Instagram</a></li>
+                                    <li class="mb-1"><a href="https://www.instagram.com/notadesigncompany/" class="text-reset text-primary-hover">Instagram</a></li>
                                     <li class="mb-1"><a href="https://www.tiktok.com/@not.a.design.company?lang=en" class="text-reset text-primary-hover">TikTok</a></li>
                                     <li class="mb-1"><a href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g" class="text-reset text-primary-hover">Linkedin</a></li>
                                     <li><a href="https://www.linkedin.com/company/98444881/" class="text-reset text-primary-hover">Youtube</a></li>
