--- a/websites/404/404.html
+++ b/websites/404/404.html
@@ -131,7 +131,7 @@
     <div class="d-flex flex-column container min-vh-100 py-20">
       <div class="row align-items-center justify-content-center justify-content-lg-between my-auto">
         <div class="col-lg-6 order-lg-2">
-          <img class="img-fluid" src="./assets/images/svg/404.svg" alt="Figure">
+          <img class="img-fluid" src="/websites/404/assets/images/svg/404.svg" alt="Figure">
         </div>
         <div class="col-md-8 col-lg-5 order-lg-1 text-center text-lg-start">
           <h1 class="display-2">Sorry, page not found.</h1>
