--- a/contact_us_it.html
+++ b/contact_us_it.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="skrollr skrollr-desktop">
+<html lang="it" class="skrollr skrollr-desktop">
 
 <head>
   <title>Not a Design Company - Contattaci</title>
-  <meta name="description" content="Not a Design Company: the new tech company in Brescia that aims to create premium websites, offering innovative and ambitious solutions to satisfy the most sophisticated digital needs.">
-  <meta name="keywords" content="tech company, Brescia, web design, premium websites, innovative solutions, ambitious goals, digital solutions, website development, professional design, cutting-edge technology, responsive web design, user experience, SEO optimization, digital marketing, online presence, customized websites, creative solutions, web development services, mobile-friendly design, modern website design, interactive user interface, SEO-friendly websites, bespoke web design, e-commerce solutions, branding, graphic design, content management systems, WordPress development, website maintenance, website security, domain registration, web hosting">
+  <meta name="description" content="Not a Design Company: la nuova tech company bresciana che mira a creare siti web premium, offrendo soluzioni innovative e ambiziose per soddisfare le esigenze digitali più sofisticate.">
+  <meta name="keywords" content="tech company, Brescia, web design, premium websites, innovative solutions, ambitious goals, digital solutions, website development, professional design, cutting-edge technology, responsive web design, user experience, SEO optimization, digital marketing, online presence, customized websites, creative solutions, web development services, mobile-friendly design, modern website design, interactive user interface, SEO-friendly websites, bespoke web design, e-commerce solutions, branding, graphic design, content management systems, WordPress development, website maintenance, website security, domain registration, web hosting, siti web premium, soluzioni innovative, obiettivi ambiziosi, soluzioni digitali, sviluppo siti web, design professionale, tecnologia all'avanguardia, web design reattivo, esperienza utente, ottimizzazione SEO, marketing digitale, presenza online, siti web personalizzati, soluzioni creative, servizi di sviluppo web, progettazione di siti Web moderni, interfaccia utente interattiva, siti Web SEO-friendly, progettazione Web su misura, soluzioni di e-commerce, negozi online, progettazione grafica, sistemi di gestione dei contenuti, sviluppo di WordPress, manutenzione di siti Web, sicurezza di siti Web, registrazione di domini">
   <meta name="author" content="Not a Design Company">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,6 +14,30 @@
   <link rel="icon" href="./assets/favicon/favicon_white.ico" type="image/x-icon" media="(prefers-color-scheme: dark)" />  
   <link rel="stylesheet" href="/assets/css/libs.bundle.css" />
   <link rel="stylesheet" href="/assets/css/index.bundle.css" />
+
+  <script>
+    // check if the language cookie is set
+    const langCookie = document.cookie.split(';').find(cookie => cookie.trim().startsWith('lang='));
+    const lang = langCookie ? langCookie.split('=')[1] : navigator.language.substring(0, 2);
+  
+    // set the language cookie
+    document.cookie = `lang=${lang}`;
+  
+    // set the redirect URL based on the language cookie
+    let redirectUrl = "contact_us.html"; // default to English
+    if (lang === "it") {
+      redirectUrl = "contact_us_it.html";
+    }
+  
+    // redirect to the appropriate page if not already on that page
+    if (window.location.pathname !== `/${redirectUrl}`) {
+      window.location.href = redirectUrl;
+    }
+  </script>
+
+  <link rel="alternate" hreflang="en" href="contact_us.html">
+  <link rel="alternate" hreflang="it" href="contact_us_it.html">
+  <link rel="alternate" hreflang="x-default" href="contact_us.html">
 </head>
 
 <body class="headroom headroom--not-bottom headroom--top" data-aos-easing="ease" data-aos-duration="800" data-aos-delay="0">
@@ -120,7 +144,7 @@
               Social Networks
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown-4">
-              <li><a class="dropdown-item" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+              <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
               <li><a class="dropdown-item" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
               <li><a class="dropdown-item" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
               <li><a class="dropdown-item" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
@@ -128,6 +152,28 @@
           </li>
         </ul>
       </div>
+      <button id="language-button" style="background: none; border: none; color: #000000; cursor: pointer;">IT | EN</button>
+
+      <script>
+        const languageButton = document.getElementById('language-button');
+      
+        languageButton.addEventListener('click', () => {
+          // check if the language cookie is already set
+          const langCookie = document.cookie.split(';').find(cookie => cookie.trim().startsWith('lang='));
+          const lang = langCookie ? langCookie.split('=')[1] : navigator.language.substring(0, 2);
+          if (lang === "en") {
+            // set the language cookie to "it"
+            document.cookie = "lang=it";
+            // reload the page in Italian
+            window.location.href = "contact_us_it.html";
+          } else {
+            // set the language cookie to "en"
+            document.cookie = "lang=en";
+            // reload the page in English
+            window.location.href = "contact_us.html";
+          }
+        });
+      </script>
     </div>
   </nav>
 
@@ -236,7 +282,7 @@
                       <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
                       <div class="collapse" id="menu-2" data-bs-parent="#toc-nav">
                           <ul class="nav nav-minimal nav-minimal-columns">
-                              <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/not.a.design.company/">Instagram</a></li>
+                              <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
                               <li class="nav-item fs-5"><a class="nav-link" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
                               <li class="nav-item fs-5"><a class="nav-link" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
                               <li class="nav-item fs-5"><a class="nav-link" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
