--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
     <i class="material-icons notranslate" id="progress-value">arrow_upward</i>
   </div>
 
-  <nav id="mainNav" class="navbar navbar-expand-lg navbar-sticky navbar-dark" id="navbarpc">
+  <nav class="navbar navbar-expand-lg navbar-sticky navbar-dark" id="navbarpc">
     <div class="container">
       <a href="#top" class="navbar-brand"><img src="./assets/images/logo-light.webp" alt="Not a Design Company logo light"></a>
       <!-- secondary -->
       <ul class="navbar-nav navbar-nav-secondary order-lg-3">
+        <li class="nav-item">
+          <button id="language-button">IT | EN</button>
+        </li>
         <li class="nav-item d-lg-none">
           <a class="nav-link nav-icon" href="" role="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="bi bi-list"></span>
@@ -149,29 +152,6 @@
           </li>
         </ul>
       </div>           
-
-      <button id="language-button" style="background: none; border: none; color: #FFFFFF; cursor: pointer;">IT | EN</button>
-
-      <script>
-        const languageButton = document.getElementById('language-button');
-      
-        languageButton.addEventListener('click', () => {
-          // check if the language cookie is already set
-          const langCookie = document.cookie.split(';').find(cookie => cookie.trim().startsWith('lang='));
-          const lang = langCookie ? langCookie.split('=')[1] : navigator.language.substring(0, 2);
-          if (lang === "en") {
-            // set the language cookie to "it"
-            document.cookie = "lang=it";
-            // reload the page in Italian
-            window.location.href = "index_it.html";
-          } else {
-            // set the language cookie to "en"
-            document.cookie = "lang=en";
-            // reload the page in English
-            window.location.href = "index.html";
-          }
-        });
-      </script>
     </div>
   </nav>
 
@@ -179,7 +159,12 @@
     <div class="container">
         <a href="/index.html" class="navbar-brand"><img src="/assets/images/logo-light.webp" alt="Not a Design Company logo light"></a>
         <ul class="navbar-nav navbar-nav-secondary order-lg-3">
-            <li class="nav-item"><a class="nav-link nav-icon" data-bs-toggle="offcanvas" href="#offcanvasNav" role="button" aria-controls="offcanvasNav"><span class="bi bi-list"></span></a></li>
+            <li class="nav-item">
+              <button id="language-button2">IT | EN</button>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link nav-icon" data-bs-toggle="offcanvas" href="#offcanvasNav" role="button" aria-controls="offcanvasNav"><span class="bi bi-list"></span></a>
+            </li>
         </ul>
     </div>
   </nav>
@@ -280,10 +265,10 @@
                       <a class="nav-link fs-4" href="#menu-2" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="menu-2">Social Networks</a>
                       <div class="collapse" id="menu-2" data-bs-parent="#toc-nav">
                           <ul class="nav nav-minimal nav-minimal-columns">
-                              <li><a class="dropdown-item" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
-                              <li><a class="dropdown-item" href="https://www.tiktok.com/@notadesigncompany">TikTok</a></li>
-                              <li class="nav-item fs-5"><a class="nav-link" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
-                              <li class="nav-item fs-5"><a class="nav-link" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
+                            <li class="nav-item fs-5"><a class="nav-link" href="https://www.instagram.com/notadesigncompany/">Instagram</a></li>
+                            <li class="nav-item fs-5"><a class="nav-link" href="https://www.tiktok.com/@not.a.design.company?lang=en">TikTok</a></li>
+                            <li class="nav-item fs-5"><a class="nav-link" href="https://www.youtube.com/channel/UChms-UJAOmlBWnqncva9o2g">Youtube</a></li>
+                            <li class="nav-item fs-5"><a class="nav-link" href="https://www.linkedin.com/company/98444881/">LinkedIn</a></li>
                           </ul>
                       </div>
                   </li>
@@ -291,6 +276,46 @@
           </ul>
       </div>
   </div>
+
+  <script>
+    const languageButton = document.getElementById('language-button');
+  
+    languageButton.addEventListener('click', () => {
+      // check if the language cookie is already set
+      const langCookie = document.cookie.split(';').find(cookie => cookie.trim().startsWith('lang='));
+      const lang = langCookie ? langCookie.split('=')[1] : navigator.language.substring(0, 2);
+      if (lang === "en") {
+        // set the language cookie to "it"
+        document.cookie = "lang=it";
+        // reload the page in Italian
+        window.location.href = "index_it.html";
+      } else {
+        // set the language cookie to "en"
+        document.cookie = "lang=en";
+        // reload the page in English
+        window.location.href = "index.html";
+      }
+    });
+
+    const languageButton2 = document.getElementById('language-button2');
+  
+    languageButton2.addEventListener('click', () => {
+      // check if the language cookie is already set
+      const langCookie = document.cookie.split(';').find(cookie => cookie.trim().startsWith('lang='));
+      const lang = langCookie ? langCookie.split('=')[1] : navigator.language.substring(0, 2);
+      if (lang === "en") {
+        // set the language cookie to "it"
+        document.cookie = "lang=it";
+        // reload the page in Italian
+        window.location.href = "index_it.html";
+      } else {
+        // set the language cookie to "en"
+        document.cookie = "lang=en";
+        // reload the page in English
+        window.location.href = "index.html";
+      }
+    });
+  </script>
 
 
   <div class="offcanvas-wrap" id="top">
